# fun-numbers

./: .gitignore  Cargo.toml
projects/anomalous-cancellation/: Cargo.toml
projects/anomalous-trigonometric/: Cargo.toml
projects/anomalous-trigonometric/src/: lib.rs  main.rs
projects/decomposable/: Cargo.toml  readme.md
projects/decomposable/src/: lib.rs
projects/decomposable/src/dfs/: mod.rs
projects/decomposable/src/generators/: mod.rs
projects/decomposable/src/pair/: display.rs  mod.rs
projects/decomposable/tests/: prime5.py  prime7.py  readme.md
projects/super-prime/: Cargo.toml
projects/super-prime/src/: lib.rs
projects/super-prime/src/dfs/: mod.rs
projects/super-prime/tests/: main.rs  prime2.py  prime3.py  prime5.py  prime7.py  readme.md
