[package]
name = "decomposable-number"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Find the super prime number."
repository = "https://github.com/oovm/fun-numbers/tree/dev/projects/super-prime"
documentation = "https://docs.rs/super-prime"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num-prime = "0.4.3"
num = "0.4.0"

[dev-dependencies]

[features]
default = []
