[package]
name = "super-prime"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/anomalous-cancellation"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
latexify = "0.0.1"
num-primes = "0.3.0"
num-traits = "0.2.15"
#num = "0.4.0"

[dev-dependencies]

[features]
default = []
